# 4H-Unfolder

./: .editorconfig  .gitignore  .mcp-project.json  BUGS_HISTORY.md  CLAUDE.md  PARITY-PROGRESS.md  PepakuraClone.sln  README.md  SESSION_PROGRESS.md
.claude/: settings.local.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml  (+2 more)
4h-unfolder-mac/: .gitignore  PROGRESS.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
4h-unfolder-mac-swift/: PROGRESS.md  Package.swift  README.md
4h-unfolder-mac/src-tauri/: Cargo.toml  tauri.conf.json
4h-unfolder-mac/src-tauri/capabilities/: default.json
4h-unfolder-mac/src-tauri/src/: lib.rs  main.rs
4h-unfolder-mac/src-tauri/src/algorithms/: assembly.rs  constants.rs  face_unfold.rs  glue_tabs.rs  layout.rs  mod.rs  pdo_unfold.rs  spanning_tree.rs
4h-unfolder-mac/src-tauri/src/commands/: assembly.rs  export.rs  mesh.rs  mod.rs  project.rs  settings.rs  unfold.rs
4h-unfolder-mac/src-tauri/src/loaders/: mod.rs  pdo_loader.rs
4h-unfolder-mac/src-tauri/src/models/: mesh.rs  mod.rs  settings.rs  unfold.rs
4h-unfolder-win/: README.md  SESSION_PROGRESS.md
installer/: 4H-Unfolder.iss  build-installer.ps1
scripts/: sync-wiki.sh
wiki/: Architecture-Overview.md  Cross-Platform-Parity.md  Editing-Edges-and-Flaps.md  Export-and-Printing.md  FAQ-and-Troubleshooting.md  Glossary.md  Home.md  Installation.md  Project-Files.md  Quick-Start.md  Roadmap.md  The-Unfold-Algorithm.md  _Footer.md  _Sidebar.md
(+255 files in other folders)
