[package]
name    = "four-h-unfolder"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "four_h_unfolder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "four-h-unfolder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri         = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs     = "2.0"
tauri-plugin-shell  = "2.0"

serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
anyhow       = "1.0"
thiserror    = "1.0"
log          = "0.4"
env_logger   = "0.11"

# Geometry / math
nalgebra     = { version = "0.33", features = ["serde-serialize"] }
glam         = { version = "0.29", features = ["serde"] }

# OBJ / mesh parsing
tobj         = { version = "4.0", features = ["async"] }

# ZIP for .4hu project bundles
zip          = "2.1"

# PDF/SVG export
svg          = "0.17"

# Rayon for parallel face processing
rayon        = "1.10"

# Platform dirs (settings path)
dirs         = "5.0"

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
panic         = "abort"
